; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_mad.c_reply_failure.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_mad.c_reply_failure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_smp = type { i64, i32, i32 }

@IB_MGMT_METHOD_GET_RESP = common dso_local global i32 0, align 4
@IB_MGMT_CLASS_SUBN_DIRECTED_ROUTE = common dso_local global i64 0, align 8
@IB_SMP_DIRECTION = common dso_local global i32 0, align 4
@IB_MAD_RESULT_FAILURE = common dso_local global i32 0, align 4
@IB_MAD_RESULT_REPLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_smp*)* @reply_failure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reply_failure(%struct.ib_smp* %0) #0 {
  %2 = alloca %struct.ib_smp*, align 8
  store %struct.ib_smp* %0, %struct.ib_smp** %2, align 8
  %3 = load i32, i32* @IB_MGMT_METHOD_GET_RESP, align 4
  %4 = load %struct.ib_smp*, %struct.ib_smp** %2, align 8
  %5 = getelementptr inbounds %struct.ib_smp, %struct.ib_smp* %4, i32 0, i32 2
  store i32 %3, i32* %5, align 4
  %6 = load %struct.ib_smp*, %struct.ib_smp** %2, align 8
  %7 = getelementptr inbounds %struct.ib_smp, %struct.ib_smp* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @IB_MGMT_CLASS_SUBN_DIRECTED_ROUTE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @IB_SMP_DIRECTION, align 4
  %13 = load %struct.ib_smp*, %struct.ib_smp** %2, align 8
  %14 = getelementptr inbounds %struct.ib_smp, %struct.ib_smp* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 8
  br label %17

17:                                               ; preds = %11, %1
  %18 = load i32, i32* @IB_MAD_RESULT_FAILURE, align 4
  %19 = load i32, i32* @IB_MAD_RESULT_REPLY, align 4
  %20 = or i32 %18, %19
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
